# helm-bnb-hack

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.playwright-mcp/: page-2026-06-09T10-10-44-876Z.yml
dashboard/: .gitignore  next.config.mjs  package-lock.json  package.json
dashboard/scripts/: sync-data.mjs
execution/: README.md  __init__.py  intents.py  twak_adapter.py
helm/: __init__.py  config.py  types.py
helm/backtest/: attribution.py  engine.py  metrics.py  result.py
helm/data/: bitquery.py  cache.py  cmc.py  defillama.py  exchange_wallets.py  geckoterminal.py  onchain_cache.py  universe.py  universe_bsc_149.json
helm/regime/: attribution.py  changepoint.py  classifier.py  features.py  hmm_model.py  market_state.py
helm/router/: router.py
helm/strategies/: base.py  baselines.py  defensive.py  mean_reversion.py  momentum.py  momentum_confirmed.py
helm/validation/: __init__.py  bootstrap.py  deflated_sharpe.py  harness.py  windows.py
onchain/: README.md  __init__.py  client_demo.py  identity.py  regime_service.py
scripts/: execution_demo.py  flow_validation.py  helm_read.py  onchain_agent_demo.py  onchain_backfill.py  onchain_validation.py  regime_backtest.py  smoke_backtest.py  validation_run.py  whale_backfill.py
skill/helm-regime-read/: SKILL.md
tests/: test_flow_validation_imports.py  test_helm_read_imports.py  test_onchain_backfill_imports.py  test_onchain_validation_imports.py  test_regime_backtest_imports.py  test_types.py  test_validation_run_imports.py  test_whale_backfill_imports.py
tests/data/: test_bitquery.py  (+8 more)
(+51 files in other folders)
