[project]
name = "helm"
version = "0.1.0"
description = "Helm — regime-switching, on-chain-flow-aware strategy skill"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "httpx>=0.27",
    "pyarrow>=16",
    "python-dotenv>=1.0",
    "hmmlearn>=0.3",
    "scikit-learn>=1.4",
    "scipy>=1.11",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "respx>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["helm"]
